# Solana-Cove-Vault

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  do.sh  integration_test.sh
client/: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
client/src/: cove_api.ts  instruction.ts  nodeConnection.ts
client/src/tests/: integration.ts
examples/template/: Cargo.toml  README.md
examples/template/src/: lib.rs
examples/template/tests/: functional_test.rs
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
strategy_api/: Cargo.toml
strategy_api/src/: error.rs  lib.rs  strategy_instruction.rs
tests/: functional_test.rs
