[package]
name = "strategy_api"
version = "0.1.0"
authors = ["Gilgamesh <gilgameshcoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.6.2"
thiserror = "1.0.21"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
num_enum = "0.5.1"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.2"
solana-sdk = "1.6.2"
spl-token-swap = "2.1.0"
solana-validator = "1.6.2"
tokio = "1.5.0"

[lib]
crate-type = ["cdylib", "lib"]